Upgraded to JDK5 language features: generics, @override, etc. Setup Eclipse with latest version (5beta) of Checkstyle.
svn path=/trunk/; revision=162